--- a/src/components/Editor/index.module.css
+++ b/src/components/Editor/index.module.css
@@ -1,7 +1,11 @@
 .editor {
+  display: -ms-grid;
   display: grid;
-  grid-template-columns: 22% 1fr;
-  grid-template-rows: 3fr 1fr;
+  -ms-grid-columns: 22% 1fr;
+      grid-template-columns: 22% 1fr;
+  -ms-grid-rows: 3fr 1fr;
+      grid-template-rows: 3fr 1fr;
   background-color: #1e1e1e;
   border-radius: 8px;
-}/*# sourceMappingURL=index.module.css.map */
+}
+/*# sourceMappingURL=index.module.css.map */
