--- a/src/components/EditorFile/index.module.css
+++ b/src/components/EditorFile/index.module.css
@@ -1,5 +1,10 @@
 .file {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  align-items: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   gap: 5px;
-}/*# sourceMappingURL=index.module.css.map */
+}
+/*# sourceMappingURL=index.module.css.map */
