--- a/src/components/Problem/index.module.css
+++ b/src/components/Problem/index.module.css
@@ -1,4 +1,6 @@
 .container {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
   position: relative;
   --vertical-padding: 60px;
@@ -6,61 +8,91 @@
   padding: var(--vertical-padding) var(--horizontal-padding);
   width: 100%;
   overflow-x: hidden;
-  justify-content: space-around;
-  align-items: center;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   background-color: #fcfaff;
 }
+
 @media screen and (max-width: 650px) {
   .container {
-    flex-direction: column-reverse;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: reverse;
+        -ms-flex-direction: column-reverse;
+            flex-direction: column-reverse;
     gap: 30px;
   }
 }
+
 .container .content {
-  flex-basis: 50%;
+  -ms-flex-preferred-size: 50%;
+      flex-basis: 50%;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-direction: column;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
   gap: 20px;
 }
+
 @media screen and (max-width: 650px) {
   .container .content {
     gap: 5px;
   }
 }
+
 .container .content .header {
   font-size: 2em;
   font-weight: 700;
 }
+
 @media screen and (max-width: 650px) {
   .container .content .header {
     font-size: 1.85em;
   }
 }
+
 .container .content .header span {
   color: #9d50f6;
 }
+
 .container .content .details {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-direction: column;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
   gap: 30px;
   line-height: 30px;
   color: #4d4d4d;
 }
+
 .container .content .details b {
   color: #000000;
 }
+
 .container .illustration {
-  flex-basis: 40%;
+  -ms-flex-preferred-size: 40%;
+      flex-basis: 40%;
   z-index: 1;
 }
+
 @media screen and (max-width: 650px) {
   .container .illustration {
     width: 75%;
   }
 }
+
 .container .rightBlurBlob {
   position: absolute;
   bottom: 0;
   right: 0;
   z-index: 0;
-}/*# sourceMappingURL=index.module.css.map */
+}
+/*# sourceMappingURL=index.module.css.map */
