--- a/src/components/EditorNav/index.module.css
+++ b/src/components/EditorNav/index.module.css
@@ -1,6 +1,6 @@
 .nav {
   background-color: #252526;
-  padding: 17px;
+  padding: 17px 0;
   border-radius: 8px 0 0 8px;
   -ms-grid-column: 1;
   -ms-grid-column-span: 1;
@@ -8,13 +8,13 @@
   -ms-grid-row: 1;
   -ms-grid-row-span: 2;
   grid-row: 1 / 3;
-  color: #ebebeb;
+  color: #ccc;
   font-size: 13.5px;
   font-family: "Segoe UI", sans-serif;
 }
 
 .nav button {
-  padding: 3px 4px;
+  padding: 3.2px 21px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -22,5 +22,11 @@
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  white-space: nowrap;
+  min-width: 100%;
+}
+
+.nav button:hover {
+  background-color: #2a2d2e;
 }
 /*# sourceMappingURL=index.module.css.map */
