--- a/src/components/EditorNav/index.module.scss
+++ b/src/components/EditorNav/index.module.scss
@@ -1,17 +1,23 @@
 .nav {
   background-color: #252526;
-  padding: 17px;
+  padding: 17px 0;
   border-radius: 8px 0 0 8px;
   grid-column: 1 / 2;
   grid-row: 1 / 3;
-  color: #ebebeb;
+  color: #ccc;
   font-size: 13.5px;
   font-family: "Segoe UI", sans-serif;
 
   button {
-    padding: 3px 4px;
+    padding: 3.2px 21px;
     display: flex;
     gap: 4px;
     align-items: center;
+    white-space: nowrap;
+    min-width: 100%;
+
+    &:hover {
+      background-color: #2a2d2e;
+    }
   }
 }
