--- a/src/components/EditorNav/index.module.scss
+++ b/src/components/EditorNav/index.module.scss
@@ -7,6 +7,25 @@
   color: #ccc;
   font-size: 13.5px;
   font-family: "Segoe UI", sans-serif;
+  overflow: auto;
+  &::-webkit-scrollbar {
+    height: 9px;
+    width: 9px;
+    border-radius: 15px;
+  }
+
+  &::-webkit-scrollbar-corner {
+    background-color: rgba(0, 0, 0, 0);
+  }
+
+  &::-webkit-scrollbar-track {
+    background-color: transparent;
+  }
+
+  &::-webkit-scrollbar-thumb {
+    background-color: #333;
+    border-radius: 15px;
+  }
 
   button {
     padding: 3.2px 21px;
