--- a/src/components/Hero/index.module.css
+++ b/src/components/Hero/index.module.css
@@ -1,5 +1,6 @@
 .hero {
-  padding: 90px 50px;
+  --hero-padding: 80px;
+  padding: var(--hero-padding) 50px;
   height: 85vh;
   display: -ms-grid;
   display: grid;
