--- a/src/components/EditorTerminal/index.module.scss
+++ b/src/components/EditorTerminal/index.module.scss
@@ -1,18 +1,18 @@
 .terminal {
-  margin-bottom: 20px;
   font-family: Consolas, monospace;
-  font-size: 15px;
+  font-size: 13.5px;
   background-color: #1e1e1e;
-  border-radius: 7px;
-  position: relative;
+  border-top: 1px solid #595959;
+
   pre {
     white-space: nowrap;
     overflow: auto;
     padding: 20px;
     font-family: Consolas, monospace;
-
+    height: 100%;
     &::-webkit-scrollbar {
       height: 11px;
+      width: 11px;
       border-radius: 15px;
     }
 
@@ -24,10 +24,10 @@
       background-color: #333;
       border-radius: 15px;
     }
-  }
 
-  &:last-child {
-    margin-bottom: 0;
+    &::-webkit-scrollbar-corner {
+      background: rgba(0, 0, 0, 0);
+    }
   }
 
   .head {
@@ -47,12 +47,12 @@
     }
   }
 
-  .body {
+  .input {
     display: flex;
     align-items: center;
-    gap: 10px;
+    gap: 9px;
     color: #ebebeb;
-    margin-top: 5px;
+    margin-top: 1px;
     width: max-content;
 
     span:first-child {
@@ -61,23 +61,16 @@
     }
   }
 
-  .absolute {
-    position: absolute;
-    opacity: 0;
+  .success {
+    color: #00cc00;
+    line-height: 1em;
+    width: max-content;
   }
-
-  .copied {
-    font-size: 14px;
-    color: #fff;
-    font-weight: 500;
-    font-family: Scandia, sans-serif;
-    pointer-events: none;
-    user-select: none;
-    top: 25px;
-    right: 20px;
-  }
-
-  &:hover .absolute {
-    opacity: 1;
+  .final_message {
+    color: #ebebeb;
+    margin-top: 20px;
+    span {
+      color: #e3e524;
+    }
   }
 }
