--- a/src/components/Hero/index.module.scss
+++ b/src/components/Hero/index.module.scss
@@ -3,7 +3,17 @@
   padding: var(--hero-padding) 50px;
   height: 85vh;
   display: grid;
-  grid-template-columns: minmax(0, 1fr) minmax(0, 1.2fr);
+  grid-template-columns: minmax(0, 1fr) minmax(0, 1.3fr);
+  column-gap: 40px;
+  overflow: hidden;
+
+  @media screen and(max-width:1060px) {
+    display: block;
+  }
+
+  @media screen and (max-width: 650px) {
+    padding: var(--hero-padding) 25px;
+  }
 
   h1 {
     font-weight: 700;
@@ -23,11 +33,40 @@
     }
   }
 
+  .left {
+    @media screen and(max-width:1060px) {
+      max-width: 450px;
+      margin: 0 auto;
+    }
+  }
+
   .talk {
     color: #4d4d4d;
     line-height: 28px;
     margin: 20px 0;
     max-width: 450px;
+    position: relative;
+    &::before {
+      content: "";
+      position: absolute;
+      --size: 250px;
+      width: var(--size);
+      height: var(--size);
+      border-radius: 50%;
+      left: -120px;
+      bottom: -200%;
+      background-image: linear-gradient(
+        164.74deg,
+        rgba(157, 80, 246, 0.25) 0.17%,
+        rgba(0, 245, 200, 0.25) 79.81%
+      );
+      filter: blur(40px);
+      z-index: -1;
+
+      @media screen and(max-width:1060px) {
+        display: none;
+      }
+    }
   }
 
   .btn_group {
@@ -37,6 +76,17 @@
       font-size: 14px;
       line-height: 1;
       padding: 0.7em 2.2em;
+    }
+
+    @media screen and (max-width: 1060px) {
+      flex-direction: column;
+      gap: 20px;
+      margin-top: 30px;
+
+      a {
+        width: 100%;
+        text-align: center;
+      }
     }
   }
 }
