--- a/src/components/Community/index.module.css
+++ b/src/components/Community/index.module.css
@@ -5,22 +5,25 @@
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  background-color: #FCFAFF;
+  gap: 60px;
+  background-color: #fcfaff;
   position: relative;
   width: 100%;
   overflow-x: hidden;
-  --vertical-padding: 60px;
-  --horizontal-padding: 30px;
+  --vertical-padding: 0;
+  --horizontal-padding: 50px;
   padding: var(--vertical-padding) var(--horizontal-padding);
+  padding-right: 0;
 }
 
-@media screen and (max-width: 650px) {
+@media screen and (max-width: 1140px) {
   .container {
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
         -ms-flex-direction: column;
             flex-direction: column;
     gap: 45px;
+    padding: 60px 25px;
   }
 }
 
@@ -72,14 +75,17 @@
   font-size: 35px;
   font-weight: 700;
   z-index: 1;
+  max-width: 545px;
+  line-height: 1.1;
 }
 
 .container .content .header span {
-  color: #008F75;
+  color: #008f75;
 }
 
 .container .content .details {
-  line-height: 30px;
+  line-height: 28px;
+  max-width: 500px;
 }
 
 .container .content .linkContainer {
@@ -96,20 +102,26 @@
 }
 
 .container .content .linkContainer .linkIcon {
-  -webkit-transition: margin-left 500ms ease-in-out;
-  transition: margin-left 500ms ease-in-out;
+  -webkit-transition: -webkit-transform 350ms ease-in-out;
+  transition: -webkit-transform 350ms ease-in-out;
+  transition: transform 350ms ease-in-out;
+  transition: transform 350ms ease-in-out, -webkit-transform 350ms ease-in-out;
+  width: 32px;
 }
 
 .container .content .linkContainer:hover .linkIcon {
-  margin-left: 12px;
+  -webkit-transform: translateX(12px);
+          transform: translateX(12px);
 }
 
 .container .content .linkContainer .communityLink {
-  background-image: linear-gradient(138.94deg, #9D50F6 33.05%, #00D1AB 80.37%);
+  background-image: linear-gradient(138.94deg, #9d50f6 33.05%, #00d1ab 80.37%);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
   background-clip: text;
   position: relative;
+  font-weight: 700;
+  font-size: 0.9em;
 }
 
 .container .content .linkContainer .communityLink::after {
@@ -119,28 +131,33 @@
   width: 100%;
   font-size: 30px;
   height: 2px;
-  background-image: linear-gradient(138.94deg, #9D50F6 33.05%, #00D1AB 80.37%);
-  bottom: -2px;
+  background-image: linear-gradient(138.94deg, #9d50f6 33.05%, #00d1ab 80.37%);
+  bottom: -1px;
   left: 1px;
 }
 
 .container .illustration {
   -ms-flex-preferred-size: 40%;
       flex-basis: 40%;
-  --padding: 7.5%;
+  --padding: 46px;
   padding-left: var(--padding);
   padding-top: var(--padding);
   border-top-left-radius: 50px;
-  background: linear-gradient(100.55deg, #7450F6 13.34%, #CF50F6 97.24%);
+  background: linear-gradient(100.55deg, #7450f6 13.34%, #cf50f6 97.24%);
   position: relative;
 }
 
-@media screen and (max-width: 650px) {
+@media screen and (max-width: 1140px) {
+  .container .illustration {
+    display: none;
+  }
+}
+
+@media screen and (max-width: 800px) {
   .container .illustration {
     width: 100%;
+    display: initial;
     margin-inline: auto;
-    padding-left: 7.5px;
-    padding-top: 7.5px;
     height: -webkit-fit-content;
     height: -moz-fit-content;
     height: fit-content;
