--- a/src/components/Community/index.module.scss
+++ b/src/components/Community/index.module.scss
@@ -1,99 +1,119 @@
-.container{
+.container {
+  display: flex;
+  align-items: center;
+  gap: 60px;
+  background-color: #fcfaff;
+  position: relative;
+  width: 100%;
+  overflow-x: hidden;
+  --vertical-padding: 0;
+  --horizontal-padding: 50px;
+  padding: var(--vertical-padding) var(--horizontal-padding);
+  padding-right: 0;
+  @media screen and (max-width: 1140px) {
+    flex-direction: column;
+    gap: 45px;
+    padding: 60px 25px;
+  }
+  .waterMark {
+    position: absolute;
+    top: 75px;
+    left: 0;
+    z-index: 0;
+    animation: scale 4s ease infinite alternate-reverse;
+
+    @keyframes scale {
+      from {
+        transform: scale(0.9);
+      }
+
+      to {
+        transform: scale(1.2);
+      }
+    }
+  }
+  .content {
+    z-index: 1;
+    flex-basis: 60%;
     display: flex;
-    align-items: center;
-    background-color: #FCFAFF;
-    position: relative;
-    width: 100%;
-    overflow-x: hidden;
-    --vertical-padding: 60px;
-    --horizontal-padding: 30px;
-    padding: var(--vertical-padding) var(--horizontal-padding);
-    @media screen and (max-width:650px) {
-        flex-direction: column;
-        gap: 45px;
+    flex-direction: column;
+    gap: 20px;
+
+    .header {
+      font-size: 35px;
+      font-weight: 700;
+      z-index: 1;
+      max-width: 545px;
+      line-height: 1.1;
+      span {
+        color: #008f75;
+      }
     }
-    .waterMark{
-        position: absolute;
-        top: 75px;
-        left: 0;
-        z-index: 0;
-        animation: scale 4s ease infinite alternate-reverse;
-        
-            @keyframes scale {
-                from {
-                    transform: scale(0.9);
-                }
-        
-                to {
-                    transform: scale(1.2);
-                }
-            }
+    .details {
+      line-height: 28px;
+      max-width: 500px;
     }
-    .content{
-        z-index: 1;
-        flex-basis: 60%;
-        display: flex;
-        flex-direction: column;
-        gap: 20px;
-        
-        .header{
-            font-size: 35px;
-            font-weight: 700;
-            z-index: 1;
-            span{
-                color: #008F75;
-            }
+    .linkContainer {
+      display: flex;
+      align-items: center;
+      gap: 20px;
+      width: fit-content;
+      .linkIcon {
+        transition: transform 350ms ease-in-out;
+        width: 32px;
+      }
+      &:hover {
+        .linkIcon {
+          transform: translateX(12px);
         }
-        .details{
-            line-height: 30px;
-        }
-                .linkContainer {
-                    display: flex;
-                    align-items: center;
-                    gap: 20px;
-                    width: fit-content;
-                    .linkIcon{
-                        transition: margin-left 500ms ease-in-out;
-                    }
-                    &:hover{
-                        .linkIcon{
-                            margin-left: 12px;
-                        }
-                    }
-        .communityLink{
-            background-image: linear-gradient(138.94deg, #9D50F6 33.05%, #00D1AB 80.37%);
-                -webkit-background-clip: text;
-                -webkit-text-fill-color: transparent;
-                background-clip: text;
-                position: relative;
-                &::after{
-    content: "";
-        position: absolute;
-        display: block;
-        width: 100%;
-        font-size: 30px;
-        height: 2px;
-        background-image: linear-gradient(138.94deg, #9D50F6 33.05%, #00D1AB 80.37%);
-        bottom: -2px;
-        left: 1px;
-        }    
-        }
-    }
-    }
-    .illustration{
-        flex-basis: 40%;
-        --padding: 7.5%;
-        padding-left: var(--padding);
-        padding-top: var(--padding);
-        border-top-left-radius: 50px;
-        background: linear-gradient(100.55deg, #7450F6 13.34%, #CF50F6 97.24%);
+      }
+
+      .communityLink {
+        background-image: linear-gradient(
+          138.94deg,
+          #9d50f6 33.05%,
+          #00d1ab 80.37%
+        );
+        -webkit-background-clip: text;
+        -webkit-text-fill-color: transparent;
+        background-clip: text;
         position: relative;
-        @media screen and (max-width: 650px) {
-            width: 100%;
-            margin-inline: auto;
-            padding-left: 7.5px;
-            padding-top: 7.5px;
-            height: fit-content;
+        font-weight: 700;
+        font-size: 0.9em;
+        &::after {
+          content: "";
+          position: absolute;
+          display: block;
+          width: 100%;
+          font-size: 30px;
+          height: 2px;
+          background-image: linear-gradient(
+            138.94deg,
+            #9d50f6 33.05%,
+            #00d1ab 80.37%
+          );
+          bottom: -1px;
+          left: 1px;
         }
+      }
     }
+  }
+  .illustration {
+    flex-basis: 40%;
+    --padding: 46px;
+    padding-left: var(--padding);
+    padding-top: var(--padding);
+    border-top-left-radius: 50px;
+    background: linear-gradient(100.55deg, #7450f6 13.34%, #cf50f6 97.24%);
+    position: relative;
+    @media screen and (max-width: 1140px) {
+      display: none;
+    }
+    @media screen and (max-width: 800px) {
+      width: 100%;
+      display: initial;
+      margin-inline: auto;
+      height: fit-content;
+    }
+  }
 }
