--- a/src/components/CtaTeam/index.module.css
+++ b/src/components/CtaTeam/index.module.css
@@ -1,11 +1,16 @@
 .container {
-  color: #4D4D4D;
+  color: #4d4d4d;
   font-weight: 400;
 }
 
-.container h3 {
-  color: #008F75;
+.container a {
+  color: #008f75;
   font-weight: 500;
   font-size: 15px;
+  text-decoration: none;
+}
+
+.container a:hover {
+  text-decoration: underline;
 }
 /*# sourceMappingURL=index.module.css.map */
