--- a/src/components/CtaTeam/index.module.scss
+++ b/src/components/CtaTeam/index.module.scss
@@ -1,10 +1,14 @@
-.container{
-    color: #4D4D4D;
-    font-weight: 400;
-    h3{
-        color: #008F75;
-        font-weight: 500;
-        font-size: 15px;
+.container {
+  color: #4d4d4d;
+  font-weight: 400;
+  a {
+    color: #008f75;
+    font-weight: 500;
+    font-size: 15px;
+    text-decoration: none;
+
+    &:hover {
+      text-decoration: underline;
     }
-    
+  }
 }
