Done with refactoring

--- a/src/components/Button/index.module.css
+++ b/src/components/Button/index.module.css
@@ -9,5 +9,16 @@
   border-radius: 9999px;
   font-weight: 700;
   font-size: 1em;
+  -webkit-transform: scale(1);
+          transform: scale(1);
+  -webkit-transition: -webkit-transform 0.3s;
+  transition: -webkit-transform 0.3s;
+  transition: transform 0.3s;
+  transition: transform 0.3s, -webkit-transform 0.3s;
+}
+
+.button:hover {
+  -webkit-transform: scale(1.05);
+          transform: scale(1.05);
 }
 /*# sourceMappingURL=index.module.css.map */
