--- a/src/components/Productivity/index.module.css
+++ b/src/components/Productivity/index.module.css
@@ -5,7 +5,7 @@
   width: 100%;
   position: relative;
   color: #000000;
-  padding: 60px 50px;
+  padding: 100px 50px;
   gap: 40px;
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
@@ -26,7 +26,7 @@
 
 @media screen and (max-width: 650px) {
   .container {
-    padding: 60px 25px;
+    padding: 70px 25px;
   }
 }
 
@@ -46,15 +46,18 @@
   font-weight: 700;
   font-size: 2em;
   margin-bottom: 8px;
+  line-height: 1.1;
 }
 
 .container .content .details {
   line-height: 28px;
   max-width: 600px;
+  color: #4d4d4d;
 }
 
 .container .content .details span {
   font-weight: 600;
+  color: #000;
 }
 
 .container .RightZigZag {
