--- a/src/components/Button/index.module.scss
+++ b/src/components/Button/index.module.scss
@@ -7,4 +7,10 @@
   border-radius: 9999px;
   font-weight: 700;
   font-size: 1em;
+  transform: scale(1);
+  transition: transform 0.3s;
+
+  &:hover {
+    transform: scale(1.05);
+  }
 }
