Updated community font

--- a/src/components/Card/index.module.css
+++ b/src/components/Card/index.module.css
@@ -33,6 +33,7 @@
       -ms-flex-align: center;
           align-items: center;
   z-index: 1;
+  font-family: "Raleway", sans-serif;
 }
 
 .card .header p {
