--- a/src/components/Card/index.module.scss
+++ b/src/components/Card/index.module.scss
@@ -22,6 +22,7 @@
     justify-content: center;
     align-items: center;
     z-index: 1;
+    font-family: "Raleway", sans-serif;
     p {
       font-size: 3em;
       font-weight: 700;
