--- a/src/pages/Community/subpage/Setup/index.module.scss
+++ b/src/pages/Community/subpage/Setup/index.module.scss
@@ -89,6 +89,12 @@
           justify-content: center;
           align-items: center;
           border-radius: 999px;
+          transform: scale(1);
+          transition: transform 0.3s;
+
+          &:hover {
+            transform: scale(1.05);
+          }
 
           .template {
             background: white;
