--- a/src/components/Productivity/index.module.css
+++ b/src/components/Productivity/index.module.css
@@ -55,7 +55,7 @@
   color: #4d4d4d;
 }
 
-.container .content .details span {
+.container .content .details b {
   font-weight: 600;
   color: #000;
 }
