--- a/src/components/Productivity/index.module.scss
+++ b/src/components/Productivity/index.module.scss
@@ -34,7 +34,7 @@
       line-height: 28px;
       max-width: 600px;
       color: #4d4d4d;
-      span {
+      b {
         font-weight: 600;
         color: #000;
       }
