--- a/src/components/Nav/index.module.css
+++ b/src/components/Nav/index.module.css
@@ -14,7 +14,7 @@
   overflow: hidden;
 }
 
-.nav svg {
+.nav > a svg {
   width: 170px;
   position: relative;
   z-index: 8;
@@ -90,7 +90,16 @@
           transform: translateY(3px) rotate(-45deg);
 }
 
-@media screen and (max-width: 950px) {
+@media screen and (max-width: 1060px) {
+  .nav .buttonContainer {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    gap: 20px;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
   .nav .menuBtnContainer {
     display: -webkit-box;
     display: -ms-flexbox;
@@ -133,7 +142,7 @@
     --horizontal-padding: 25px;
     --vertical-padding: 20px;
   }
-  .nav svg {
+  .nav > a svg {
     width: 145px;
   }
   .nav ul {
